# 3D-PLI-HDF5

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml  cmake.yml  doxygen.yml  lint.yml
cmake/: PLIHDF5Config.cmake.in  PLIHDF5ConfigVersion.cmake.in  configure_files.cmake  cpack_config.cmake  install.cmake  package-config.cmake  package.cmake  version.cmake
files/: CMakeLists.txt  forbiddenAttributes.json
files/PLIHDF5/: attributeSettings.json  forbiddenAttributes.json  idAttributes.json
html/: README_8md.html  annotated.html  attributes_8cpp.html  attributes_8h.html  attributes_8h_source.html  classPLI_1_1HDF5_1_1AttributeExistsException-members.html  classPLI_1_1HDF5_1_1AttributeExistsException.html  classPLI_1_1HDF5_1_1AttributeHandler-members.html  classPLI_1_1HDF5_1_1AttributeHandler.html  classPLI_1_1HDF5_1_1AttributeNotFoundException-members.html  classPLI_1_1HDF5_1_1AttributeNotFoundException.html  classPLI_1_1HDF5_1_1Dataset-members.html  classPLI_1_1HDF5_1_1Dataset.html  classPLI_1_1HDF5_1_1DatasetExistsException-members.html  classPLI_1_1HDF5_1_1DatasetExistsException.html  classPLI_1_1HDF5_1_1DatasetNotFoundException-members.html  classPLI_1_1HDF5_1_1DatasetNotFoundException.html  classPLI_1_1HDF5_1_1Dataset_1_1Hyperslab-members.html  classPLI_1_1HDF5_1_1Dataset_1_1Hyperslab.html  classPLI_1_1HDF5_1_1Dataset_1_1Slices-members.html  classPLI_1_1HDF5_1_1Dataset_1_1Slices.html  classPLI_1_1HDF5_1_1DimensionMismatchException-members.html  classPLI_1_1HDF5_1_1DimensionMismatchException.html  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeExistsException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeExistsException.html  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeNotFoundException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeNotFoundException.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetExistsException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetExistsException.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetNotFoundException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetNotFoundException.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetOperationOverflowException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetOperationOverflowException.html  classPLI_1_1HDF5_1_1Exceptions_1_1DimensionMismatchException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1DimensionMismatchException.html  classPLI_1_1HDF5_1_1Exceptions_1_1FileExistsException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1FileExistsException.html  classPLI_1_1HDF5_1_1Exceptions_1_1FileNotFoundException-members.html  classPLI_1_1HDF5_1_1Exceptions_1_1FileNotFoundException.html  classPLI_1_1HDF5_1_1Exceptions_1_1GroupExistsException-members.html  (+129 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  (+35 more)
latex/: annotated.tex  attributes_8cpp.tex  attributes_8h.tex  attributes_8h_source.tex  classPLI_1_1HDF5_1_1AttributeExistsException.eps  classPLI_1_1HDF5_1_1AttributeExistsException.tex  classPLI_1_1HDF5_1_1AttributeHandler.tex  classPLI_1_1HDF5_1_1AttributeNotFoundException.eps  classPLI_1_1HDF5_1_1AttributeNotFoundException.tex  classPLI_1_1HDF5_1_1Dataset.eps  classPLI_1_1HDF5_1_1Dataset.tex  classPLI_1_1HDF5_1_1DatasetExistsException.eps  classPLI_1_1HDF5_1_1DatasetExistsException.tex  classPLI_1_1HDF5_1_1DatasetNotFoundException.eps  classPLI_1_1HDF5_1_1DatasetNotFoundException.tex  classPLI_1_1HDF5_1_1Dataset_1_1Hyperslab.tex  classPLI_1_1HDF5_1_1Dataset_1_1Slices.tex  classPLI_1_1HDF5_1_1DimensionMismatchException.eps  classPLI_1_1HDF5_1_1DimensionMismatchException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeExistsException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeExistsException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeNotFoundException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1AttributeNotFoundException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetExistsException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetExistsException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetNotFoundException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetNotFoundException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetOperationOverflowException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1DatasetOperationOverflowException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1DimensionMismatchException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1DimensionMismatchException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1FileExistsException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1FileExistsException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1FileNotFoundException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1FileNotFoundException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1GroupExistsException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1GroupExistsException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1GroupNotFoundException.eps  classPLI_1_1HDF5_1_1Exceptions_1_1GroupNotFoundException.tex  classPLI_1_1HDF5_1_1Exceptions_1_1HDF5RuntimeException.eps  (+70 more)
src/: CMakeLists.txt  attributes.cpp  chunking.cpp  config.cpp  dataset.cpp  exceptions.cpp  file.cpp  group.cpp  link.cpp  object.cpp  plihdf5.cpp  plim.cpp  sha256.cpp  sha512.cpp  type.cpp
src/PLIHDF5/: attributes.h  attributes.tpp  chunking.h  config.h.in  dataset.h  dataset.tpp  exceptions.h  file.h  group.h  link.h  object.h  plihdf5.h  plim.h  sha256.h  sha512.h  type.h  version.h.in
src/bindings/: file_module.cpp  np_array.h
test/: CMakeLists.txt  no_mpi_test_dataset.cpp  no_mpi_test_file.cpp  testEnvironment.h  test_attributes.cpp  test_attributes.cpp.in  test_chunking.cpp  test_dataset.cpp  test_file.cpp  test_group.cpp  test_link.cpp  test_odf.cpp  test_plihdf5.cpp  test_plim.cpp  test_sha256.cpp  test_sha512.cpp  test_type.cpp  test_wrong_behaviour.cpp
