include(GNUInstallDirs)

set(PLIHDF5_ATTRIBUTE_SETTINGS_FILE_PATH
    "${CMAKE_INSTALL_DATAROOTDIR}/PLIHDF5/attributeSettings.json"
    PARENT_SCOPE)

install(
  DIRECTORY "PLIHDF5" EXPORT PLIHDF5Targets
  DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}"
  COMPONENT runtime
  FILES_MATCHING
  PATTERN "*.json")
